<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="#292626">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="#DD2C00"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_43sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/delete_textView"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"/>

    <TextView
        android:id="@+id/textDeleteNoteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:text="@string/delete_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete_note"
        android:textColor="#DD2C00"
        android:textSize="@dimen/_13sdp"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage" />


    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/text_cancel"
        android:textColor="#FFAB00"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
        app:layout_constraintBottom_toBottomOf="@id/textDeleteNote"
        app:layout_constraintTop_toTopOf="@id/textDeleteNote"
        android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>