<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagedeveloper"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:onClick="onClickimagedeveloper"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_baseline_emoji_people_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <LinearLayout
        android:id="@+id/layoutsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="#131313"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorWhite" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="#5E5757"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutsearch"

        />


    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131313"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-2dp">


        <ImageView
            android:id="@+id/calendar_image"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:onClick="onClickcalendar"
            android:src="@drawable/ic_calendar_events"
            app:tint="#5CEF99" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_note_color_4"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/layoutQuickActions"
        app:tint="@color/black" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintdeveloper"
        android:alpha="0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_53sdp"
        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:background="#242725"
        android:focusable="true"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageDeveloper"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:alpha="0"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/_20sdp"
            android:foregroundGravity="center"
            android:src="@drawable/developer"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/o_razrabotchike"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toBottomOf="@id/imageDeveloper" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text1"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/e_mail"
            android:textColor="#777171"
            android:textSize="@dimen/_13ssp"
            android:gravity="center"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDeleteNoteContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:background="#292626"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageDeleteNote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#DD2C00"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete" />

        <TextView
            app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
            app:layout_constraintTop_toTopOf="@id/imageDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_43sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:includeFontPadding="false"
            android:text="@string/delete_textView"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/textDeleteNoteMessage"
            app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/delete_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/textDeleteNote"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDeleteNoteMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/delete_note"
            android:textAllCaps="true"
            android:textColor="#DD2C00"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/textCancel"
            app:layout_constraintBottom_toBottomOf="@id/textDeleteNote"
            app:layout_constraintEnd_toStartOf="@id/textDeleteNote"
            app:layout_constraintTop_toTopOf="@id/textDeleteNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:padding="@dimen/_8sdp"
            android:text="@string/text_cancel"
            android:textAllCaps="true"
            android:textColor="#FFAB00"
            android:textSize="@dimen/_13sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>